Fix: IE text in card not truncating

--- a/src/scss/lexicon-base/_cards.scss
+++ b/src/scss/lexicon-base/_cards.scss
@@ -131,8 +131,7 @@
 		display: table-cell;
 		position: relative;
 		vertical-align: middle;
-
-		@include word-wrap;
+		word-break: break-all; // IE
 
 		.img-responsive {
 			max-width: none;
